Closure_121/evosuite/original/evosuite-report-org/test_build_org.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Closure_121_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:build/classes/:lib/*  /home/liumengjiao/Desktop/CI/Evosuite/Closure_121/Closure/evosuite/3/com/google/javascript/jscomp/InlineVariables_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_121/Closure/evosuite/3/com/google/javascript/jscomp/InlineVariables_ESTest_scaffolding.java >> evosuite-report-org/test_build_org.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Closure_121/Closure/evosuite/3/com/google/javascript/jscomp/InlineVariables_ESTest.java:24: error: cannot find symbol
      InlineVariables.Mode inlineVariables_Mode0 = InlineVariables.Mode.ALL;
                     ^
  symbol:   class Mode
  location: class InlineVariables
/home/liumengjiao/Desktop/CI/Evosuite/Closure_121/Closure/evosuite/3/com/google/javascript/jscomp/InlineVariables_ESTest.java:24: error: cannot find symbol
      InlineVariables.Mode inlineVariables_Mode0 = InlineVariables.Mode.ALL;
                                                                  ^
  symbol:   variable Mode
  location: class InlineVariables
/home/liumengjiao/Desktop/CI/Evosuite/Closure_121/Closure/evosuite/3/com/google/javascript/jscomp/InlineVariables_ESTest.java:38: error: cannot find symbol
      InlineVariables.Mode inlineVariables_Mode0 = InlineVariables.Mode.CONSTANTS_ONLY;
                     ^
  symbol:   class Mode
  location: class InlineVariables
/home/liumengjiao/Desktop/CI/Evosuite/Closure_121/Closure/evosuite/3/com/google/javascript/jscomp/InlineVariables_ESTest.java:38: error: cannot find symbol
      InlineVariables.Mode inlineVariables_Mode0 = InlineVariables.Mode.CONSTANTS_ONLY;
                                                                  ^
  symbol:   variable Mode
  location: class InlineVariables
/home/liumengjiao/Desktop/CI/Evosuite/Closure_121/Closure/evosuite/3/com/google/javascript/jscomp/InlineVariables_ESTest.java:52: error: cannot find symbol
      InlineVariables.Mode inlineVariables_Mode0 = InlineVariables.Mode.LOCALS_ONLY;
                     ^
  symbol:   class Mode
  location: class InlineVariables
/home/liumengjiao/Desktop/CI/Evosuite/Closure_121/Closure/evosuite/3/com/google/javascript/jscomp/InlineVariables_ESTest.java:52: error: cannot find symbol
      InlineVariables.Mode inlineVariables_Mode0 = InlineVariables.Mode.LOCALS_ONLY;
                                                                  ^
  symbol:   variable Mode
  location: class InlineVariables
6 errors
